# signalDraw-isb

./: README.md  pyproject.toml  sesion_filtros.md  test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb
src/signaldraw_isb/: __init__.py  widget.py
